v0.1.3: * New props added: align, fromLeft, fromRight         * Responsive bugs fixed.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,40 +1,21 @@
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css';
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css';
 
-.App {
+/* Images Component CSS */
+
+.grid-container {
   text-align: center;
   margin: auto;
+  width: 100%;
+  position: absolute;
   padding: 10px;
   height: inherit;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.container {
+  padding-left: 0;
+  padding-right: 0;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-/* Images Component CSS */
-
 
 .container *{
   margin: 0;
